# opencrg-c-api

./: CMakeLists.txt  README.md  makefile
.github/workflows/: codeql.yml
inc/: crgBaseLib.h  crgBaseLibPrivate.h
src/: crgContactPoint.c  crgEvalpk.c  crgEvaluv2xy.c  crgEvalxy2uv.c  crgEvalz.c  crgLoader.c  crgMgr.c  crgMsg.c  crgOptionMgmt.c  crgPortability.c  crgStatistics.c
